samples/app/httproute.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-routing
  namespace: app
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: nginx
    port: 80
  rules:
  - retry:
      attempts: 3
      codes:
      - 500
      - 502
      - 503
      - 504
      backoff: 100ms
    timeouts:
      request: 5s
      backendRequest: 1s
    backendRefs:
    - name: nginx-v1
      port: 80
      weight: 50
    - name: nginx-v2
      port: 80
      weight: 50
